--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -10,6 +10,10 @@ Describes the relevant requirements and the driving forces that software archite
 * relevant stakeholders and their expectations
 ****
 
+* LoMap is a decentralized web application where citizens will be able to check personalized maps filled with their city's places and shops.
+* Our goal is to provide Brussels' citizens the most useful and secure application to keep and share their favourites places such as restaurants, shops, monuments and more.
+* We have also the objective of creating a general software solution for every city around the world that could need our app.
+
 === Requirements Overview
 
 [role="arc42help"]
@@ -30,6 +34,28 @@ If requirements documents exist this overview should refer to these documents.
 Keep these excerpts as short as possible. Balance readability of this document with potential redundancy w.r.t to requirements documents.
 ****
 
+.High level requirements
+[options="header,footer"]
+|=======================
+|Name|Description
+|Adding places on different tabs   |Users can add different kinds of places (shops, restaurants, monuments, landscapes...)    
+|Map visualization    |Users can see places on a map     
+|Reviews    |Users can add punctuations, comments, photos and more to added places   
+|Privacy    |A user can customize the way of sharing information with other users
+|Decentralized information| Each user has a unique pod for its personal information
+|Optional centralized information| If necessary, for specific perfomance purposes, some information can be centralized
+|Social interaction| A user can see other user's places and reviews
+|App options available| There are filters for categories, friends and more
+|=======================
+
+.Extra requirements
+[options="header,footer"]
+|=======================
+|Name|Description
+|User roles| There will be roles: citizien, clothing shop, restaurant, bar...
+|Establishment pods| Shops, bars, restaurants, etc can create their own pod
+|=======================
+
 === Quality Goals
 
 [role="arc42help"]
@@ -44,6 +70,16 @@ If you as an architect do not know how the quality of your work will be judged â
 .Form
 A table with quality goals and concrete scenarios, ordered by priorities
 ****
+
+[options="header",cols="1,2"]
+|=======================
+|Name|Description
+|Privacy| User information will be on its personal pod (information will be decentralized)
+|Integrity| The app will check that the stored data is valid and ensures that the information lasts
+|Usability| All users will use the app without any problem. The app will be intuitive and easy to use
+|Accesibility| The app can be used with any device (mobile, laptop, tablet or pc)
+|Security| Real-time-location is only available if the user enables it. LoMap will store the minimum required info of the user
+|=======================
 
 === Stakeholders
 
@@ -70,6 +106,8 @@ Table with role names, person names, and their expectations with respect to the 
 [options="header",cols="1,2,2"]
 |===
 |Role/Name|Contact|Expectations
-| _<Role-1>_ | _<Contact-1>_ | _<Expectation-1>_
-| _<Role-2>_ | _<Contact-2>_ | _<Expectation-2>_
+| SOLID || Make decentralized SOLID based technologies more visible for the public
+| Development team || Build a full functional app, hone teamwork and try to get the scolarship offered by SOLID team
+| Citizens|| Discover new places and stablishments and be able to tell their favourite ones to their friends
+| Establishments|| Make themselves known by adding them to the map
 |===
