--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -38,6 +38,16 @@ All kinds of diagrams that show the system as a black box and specify the domain
 Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
+image::LOmap_BUsiness.png[] 
+
+|=======================
+|*Entity*|*Description*
+|User| Interacts with the application front-end and sends requests to the backend.
+|POD| Stores user's private information. In case the user is not registered it creates a new POD.
+|System| It is responsible for making the application work. 
+|Database| Stores user's logging information.
+|API| We are using OpenStreet Maps to visualize the locations.
+|=======================
 
 **<Diagram or Table>**
 
@@ -58,6 +68,20 @@ E.g. UML deployment diagram describing channels to neighboring systems,
 together with a mapping table showing the relationships between channels and input/output.
 
 ****
+
+image::Technical.png[] 
+
+|=======================
+|*Technology*|*Description*
+|REACT| We use it to develop the frontend of the application
+|SOLID| We use SOLID PODs to store users information 
+|JavaScript| Principal language for our code application
+|CSS| Language to set different styles and positions to our components.
+|Docker| Used for the system deployment
+|AWS| Used for the system deployment
+|=======================
+
+We use OpenStreet Maps as the main API for the project to visualize the maps.
 
 **<Diagram or Table>**
 
