--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -106,8 +106,10 @@ Table with role names, person names, and their expectations with respect to the 
 [options="header",cols="1,2,2"]
 |===
 |Role/Name|Contact|Expectations
-| SOLID || Make decentralized SOLID based technologies more visible for the public
-| Development team || Build a full functional app, hone teamwork and try to get the scolarship offered by SOLID team
-| Citizens|| Discover new places and stablishments and be able to tell their favourite ones to their friends
-| Establishments|| Make themselves known by adding them to the map
+|Inrupt |info@inrupt.com| Make decentralized SOLID based technologies more visible for the public through this app
+|Eduardo Blanco Bielsa |uo285176@uniovi.es| Build a secure and decentralized app, hone teamwork and try to get the scolarship offered by SOLID team
+|Jonathan Arias Busto|uo283586@uniovi.es| Learn new skills and learn how to work as a team on big projects
+|Laura Cordero Castrillo|uo275955@uniovi.es| Build a useful app and learn new technologies
+|Fernando José González Sierra|uo277938@uniovi.es|Learn new frontend skills and build a nice app
+|Cristian Augusto|augustocristian@uniovi.es|A full functional and decentralized app
 |===
