--- a/docs/10_quality_scenarios.adoc
+++ b/docs/10_quality_scenarios.adoc
@@ -20,6 +20,7 @@ concrete and measurable.
 === Quality Tree
 
 [role="arc42help"]
+
 ****
 .Content
 The quality tree (as defined in ATAM – Architecture Tradeoff Analysis Method) with quality/evaluation scenarios as leafs.
@@ -35,6 +36,8 @@ The quality tree is a high-level overview of the quality goals and requirements:
 
 In any case the tree should include links to the scenarios of the following section.
 ****
+
+image:Quality Tree.png["Quality Tree"]
 
 === Quality Scenarios
 
@@ -61,3 +64,12 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 .Form
 Tabular or free form text.
 ****
+
+|=======================
+|*Quality*|*Scenario*|*User Priority (App success)*|*Developer Priority (Difficulty to achieve)*
+|Privacy| A user who wants to access their friend list. Because we are using SOLID, this information will be stored in its personal POD, only the user can access to this info. | HIGH | MEDIUM
+|Integrity| When an update releases, the information stored will still be there and valid. | LOW | HIGH
+|Usability| A user want to add a new point on the map. There will be an easy way to do it that is intuitive to users | HIGH | LOW
+|Accesibility| A user who want to access with their phone. The application will adapt so they can use it on multiple platforms | HIGH | MEDIUM
+|Security| If a user wants to make a point on the map with their current location, a message will be shown to ask for permision to use their location. | HIGH | HIGH
+|=======================
