--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -57,7 +57,7 @@ database Pod as "USER_POD"
 User -> EntityWeb: enter WebID
 EntityWeb -> EntityRest: send user WebId
 EntityRest -> Pod: get username and password
-Pod -> EntityRest: send username and password
+Pod --> EntityRest: send username and password
 EntityRest -> EntityRest: check login data
 EntityRest -> EntityWeb: notify success
 EntityWeb -> User: log the user into the app
@@ -76,8 +76,8 @@ User -> EntityWeb: select the data to load on map
 EntityWeb -> EntityRest: send data and parameters
 EntityRest -> Pod: get locations
 EntityRest -> Mongo: get locations
-Pod -> EntityRest: send data back
-Mongo -> EntityRest: send data back
+Pod --> EntityRest: send data back
+Mongo --> EntityRest: send data back
 EntityRest -> EntityWeb: load data to map
 EntityWeb -> User: show map
 ----
@@ -94,7 +94,7 @@ database Pod as "USER_POD"
 User -> EntityWeb: select friend list option (has to be logged)
 EntityWeb -> EntityRest: ask for data
 EntityRest -> Pod: get friends data
-Pod -> EntityRest: send data back
+Pod --> EntityRest: send data back
 EntityRest -> EntityWeb: load data to app
 EntityWeb -> User: show friends list
 ----
@@ -145,8 +145,8 @@ User -> EntityWeb: select a cattegory (has to be logged)
 EntityWeb -> EntityRest: send petition
 EntityRest -> Pod: ask for the places from the specified cattegory
 EntityRest -> Mongo: ask for the places from the specified cattegory
-Pod -> EntityRest: receive data
-Mongo -> EntityRest: receive data
+Pod --> EntityRest: receive data
+Mongo --> EntityRest: receive data
 EntityRest -> EntityWeb: send data to frontend
 EntityWeb -> User: show places for specified cattegory on map
 ----
