--- a/webapp/src/locale/es/translation.json
+++ b/webapp/src/locale/es/translation.json
@@ -38,7 +38,10 @@
         "inComm":{
             "by": "De: ",
             "on": "el "
-        }
+        },
+        "lat": "Latitud:",
+        "long": "Longitud:",
+        "rating": "Valoración: "
     },
 
     "LocateMarkers":{
