--- a/webapp/src/locale/en/translation.json
+++ b/webapp/src/locale/en/translation.json
@@ -1,76 +1,76 @@
 {
-    "About":{
-            "jonathan":{
-                "userTitle": "React developer",
-                "description": "Student and frontend developer"
-            },
-            "laura":{
-                "userTitle": "Java Developer",
-                "description": "Student and Java developer"
-            },
-            "edu":{
-                "userTitle": "Linux administrator",
-                "description": "Student and cibersecurity lover"
-            },
-            "fer":{
-                "userTitle": "Backend developer",
-                "description": "Student and backend enthusiast"
-            },
-            "xin":{
-                "userTitle": "Software Developer",
-                "description": "Stackoverflow lover"
-            },
-            "title":"LoMap team ⭐️"
-        },
-    
-    "Menu":{
-        "home": "HOME",
-        "about": "ABOUT"
-    },
+	"About": {
+		"jonathan": {
+			"userTitle": "React developer",
+			"description": "Student and frontend developer"
+		},
+		"laura": {
+			"userTitle": "Java Developer",
+			"description": "Student and Java developer"
+		},
+		"edu": {
+			"userTitle": "Linux administrator",
+			"description": "Student and cibersecurity lover"
+		},
+		"fer": {
+			"userTitle": "Backend developer",
+			"description": "Student and backend enthusiast"
+		},
+		"xin": {
+			"userTitle": "Software Developer",
+			"description": "Stackoverflow lover"
+		},
+		"title": "LoMap team 5c ⭐️"
+	},
 
-    "FriendsList":{
-        "list": "List of friends"
-    },
+	"Menu": {
+		"home": "HOME",
+		"about": "ABOUT"
+	},
 
-    "MarkerCard":{
-        "comment": "Comment",
-        "score": "Score",
-        "inComm":{
-            "title": "Comments",
-            "by": "By: ",
-            "on": "on "
-        },
-        "lat": "Latitude:",
-        "long": "Longitude:",
-        "rating": "Rating: "
-    },
+	"FriendsList": {
+		"list": "List of friends"
+	},
 
-    "LocateMarkers":{
-        "here": "You are here"
-    },
+	"MarkerCard": {
+		"comment": "Comment",
+		"score": "Score",
+		"inComm": {
+			"title": "Comments",
+			"by": "By: ",
+			"on": "on "
+		},
+		"lat": "Latitude:",
+		"long": "Longitude:",
+		"rating": "Rating: "
+	},
 
-    "PodCreateForm":{
-        "create": "Create location",
-        "title": "Title",
-        "error-title": "Title not valid!",
-        "description": "Description",
-        "error-descrp": "Description not valid!",
-        "category":{
-            "title":"Category",
-            "landscape": "Landscape",
-            "monument": "Monument",
-            "shop": "Shop",
-            "bar": "Bar",
-            "other": "Other"
-        },
-        "submit": "Create",
-        "error-submit": "Error creating location! Please try again later"
-    },
+	"LocateMarkers": {
+		"here": "You are here"
+	},
 
-    "NotLoggedText": "Not logged, please login!",
+	"PodCreateForm": {
+		"create": "Create location",
+		"title": "Title",
+		"error-title": "Title not valid!",
+		"description": "Description",
+		"error-descrp": "Description not valid!",
+		"category": {
+			"title": "Category",
+			"landscape": "Landscape",
+			"monument": "Monument",
+			"shop": "Shop",
+			"bar": "Bar",
+			"other": "Other"
+		},
+		"submit": "Create",
+		"error-submit": "Error creating location! Please try again later"
+	},
 
-    "LoginButton":{
-        "in":"Login",
-        "out": "Logout"
-    }
+	"NotLoggedText": "Not logged, please login!",
+
+	"LoginButton": {
+		"in": "LOGIN",
+		"out": "LOGOUT"
+	}
 }
