Fixed some test and added the spanish version

--- a/webapp/src/locale/es/translation.json
+++ b/webapp/src/locale/es/translation.json
@@ -14,7 +14,7 @@
 		},
 		"fer": {
 			"userTitle": "Desarrollador backend",
-			"description": "Estudiante y entusisasta del backend"
+			"description": "Estudiante y entusiasta del backend"
 		},
 		"xin": {
 			"userTitle": "Desarrolladora software",
