--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -42,7 +42,10 @@ We have chosen to use the next technologies on the app:
 
 * **Github**: is a version management system where all the code will be stored, structured and modified.
 
+* **Bootstrap**: is a framework that provides a collection of tools to simplify the use of html and css in the application.
+
 === Why this technologies?
 * React, CSS, Javascript and NodeJS were chosen to reach a good level of usability and accesibility.
 * MongoDB, SOLID, docker and some libraries of NodeJS will provide the privacy, integrity and security of the web app.
 * Github was chosen for version control and organization and communication between the team.
+* Bootstrap was chosen becouse the facilities it provides and to have a nice, clean and responsive view to the web app.
