--- a/docs/09_design_decisions.adoc
+++ b/docs/09_design_decisions.adoc
@@ -31,6 +31,6 @@ Various options:
 |Data Base| We will use MongoDB to store some information.| MonboDB works good with NodeJS. | It is a new technology for the team, so we have to learn.
 |OpenStreetMaps API| We will use the API to create the map. | It's free, not like the Google Maps API.| It's the first time using it, we'll have to adapt.
 |Docker+AWS| We use them to deploy the application.| It's free and it provides a very fast deployment. | The general cloud computing issues as backup protection.
-|CSS| We use it to add a nice look to the application.| It's a well known stylesheet languaje for the team. | Different browsers work different, we have to take care of it.|
+|CSS+Bootstrap| We use it to add a nice look to the application.| It's a well known stylesheet languaje for the team. | Different browsers work different, we have to take care of it.|
 |=======================
 
