--- a/webapp/src/locale/es/translation.json
+++ b/webapp/src/locale/es/translation.json
@@ -60,10 +60,24 @@
 		"error-descrp": "¡Descripción no válida!",
 		"category": {
 			"title": "Categoría",
+			"all": "Todo",
 			"landscape": "Paisaje",
 			"monument": "Monumento",
 			"shop": "Tienda",
 			"bar": "Bar",
+			"restaurant": "Restaurante",
+			"supermarket": "Supermercado",
+			"hotel": "Hotel",
+			"cinema": "Cine",
+			"academicInstitution": "Institución académica",
+			"publicInstitution": "Institución pública",
+			"sportsClub": "Club Deportivo",
+			"museum": "Museo",
+			"park": "Parque",
+			"hospital": "Hospital",
+			"policeStation": "Estación de policía",
+			"transportCenter": "Transportes",
+			"entertainment": "Entretenimiento",
 			"other": "Otro"
 		},
 		"submit": "Crear",
