several bug fixes

--- a/webapp/src/locale/en/translation.json
+++ b/webapp/src/locale/en/translation.json
@@ -48,6 +48,7 @@
     "rating": "Rating: ",
     "uploadImage": "Upload image:",
     "upload": "Upload",
+    "uploadInput": "No files selected",
     "imageModalTitle": "Image",
     "imageModalClose": "Close"
   },
