--- a/webapp/src/locale/es/translation.json
+++ b/webapp/src/locale/es/translation.json
@@ -48,6 +48,7 @@
     "rating": "Valoración: ",
     "uploadImage": "Cargar imagen:",
     "upload": "Publicar",
+    "uploadInput": "Seleccionar imagen",
     "imageModalTitle": "Imagen",
     "imageModalClose": "Cerrar"
   },
